# dramatic_options

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  PREREG_CHEAPNESS_WATCH.md  PREREG_CONVEXITY_CALIBRATION.md  PREREG_COUNCIL_GATE_SEPARATION.md  PREREG_DATA_FEED_OPRA_SEQUENCING.md  PREREG_EVENT_LEG.md  PREREG_EVIDENCE_GROUNDING.md  PREREG_FIXED_BASKET_NULL.md  PREREG_FORWARD_CATALYST_GROUNDING.md  PREREG_FRESH_INFLECTION_FUNNEL.md  PREREG_FSSD.md  PREREG_NARRATION_PROBE.md  PREREG_REAL_MONEY_BROKER.md  PREREG_SEEDED_GENERATOR_DIAGNOSTIC.md  PREREG_THEMATIC_CONVEXITY.md  PREREG_THEME_GENERATION_STUB.md  PREREG_THEME_GENERATOR.md  PREREG_UNIVERSE_CURATION.md  README.md  SPEC.md  basket_quality.py  breach_audit.py  broker.py  card_drafts.py  cheapness_watch.py  cluster_diagnostic.py  clusters.py  config.json  config_loader.py  conftest.py  convexity_data.py  convexity_gate.py  convexity_sizing.py  corpus_content.json  (+43 more)
.streamlit/: config.toml
backtest/: engine.py  run.py
calibration/: engine.py  metrics.py  pricing.py  run.py
corpus/: __init__.py  assemble.py  bls_series.py  capital_raises.py  content.py  customer_concentration.py  eia_series.py  etf_constituents.py  federal_awards.py  nrc_dockets.py
council/: __init__.py  agents.py  context.py  council.py  debate.py  filters.py  paired_contrast.py  proposal.py  router.py  scoring.py  sentinel.py  wiring.py
dashboard_web/: .gitignore  README.md  REVIEW_BACKLOG.md
data/: alpaca_client.py  analyst_coverage.py  cache.py  edgar_index.py  filings.py  finra_si.py  forward_catalysts.py  fundamentals.py  insider.py  market.py  news.py  prospectus.py  shares_out.py  structural_events.py  x_feed.py
dev/: config.json  system_snapshot.txt
dramatic_options/: __init__.py  basket_quality.py  breach_audit.py  broker.py  clock.py  cluster_diagnostic.py  config_loader.py  convexity_data.py  convexity_gate.py  convexity_sizing.py  council_health_report.py  dashboard_data.py  discovery.py  fixed_basket.py  monitor.py  orchestrator.py  paper_loop.py  risk.py  sentinel_scoring.py  sentinels.py  shadow_book.py  shares_basket.py  state.py  structure.py  universe.py
generator/: __init__.py  ceiling.py  entity.py  orchestrate.py  probe.py  probe_llm.py  probe_prompts.py  prompts.py  read.py  score.py  synthesize.py  verify.py
prod/: production_health_report.txt
records/: 2026-06-09_window1_feasibility_screen.txt  2026-06-09_window1_longlist.txt  2026-06-10_retightened_rescore.txt  2026-06-11_fundamentals_fill_audit.txt  2026-06-15_s9_rescore_2026-06-15T060251Z.txt  2026-06-22_bucket_taxonomy_PROPOSAL.md  2026-06-23_autonomous_corpus_generator_negative.md  2026-06-23_corpus_reach_diagnostic.json  2026-06-28_seeded_gen_reach_measurement.md  2026-06-29_cheapness_watch_degenerate_iv_AMENDMENT_DRAFT.md  2026-06-29_dualread_flip_analysis.md  2026-06-30_accel_price_flat_feed_PREREG.md  2026-06-30_dualread_lapse_decision.md  2026-06-30_edgar_funnel_prototype_PREREG.md  2026-06-30_federal_awards_materiality_probe_PREREG.md  2026-07-10_cap_sweep_raw.txt  (+33 more)
(+232 files in other folders)
