[project]
name = "dramatic-options"
version = "0.0.0"
description = "Thesis-first thematic equity-options trading system (Alpaca, paper-first)."
requires-python = ">=3.11"

# Flat module layout (modules at repo root), so no [tool.setuptools] packages — this
# project is run, not pip-installed. pyproject exists for ruff + pytest config only.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long log/SQL strings are fine

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
