[project]
name = "dramatic-options"
version = "0.0.0"
description = "Thesis-first thematic equity-options trading system (Alpaca, paper-first)."
requires-python = ">=3.11"

# Package layout (SPEC §10): the core lives in the `dramatic_options/` package; the
# Streamlit `dashboard.py`, `scripts/`, and `tests/` sit at the repo root. Run as a module
# (`python -m dramatic_options.orchestrator`) or `pip install -e .` for an importable
# install. Tests resolve the package via the repo-root conftest without requiring install.

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dramatic_options*"]

[tool.ruff]
line-length = 100
target-version = "py311"
# shelf/ holds parked backtest-gate code (graded-negative edges) — kept for revival,
# excluded from lint/CI on the active surface. See shelf/README.md.
exclude = ["shelf"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long log/SQL strings are fine

[tool.pytest.ini_options]
testpaths = ["tests"]
# Deselect the live (real-LLM-spending) acceptance tests by default so CI / offline runs never spend
# or need keys. Run them on-host with:  pytest -m live
addopts = "-q -m 'not live'"
markers = [
    "live: real-LLM-spending council acceptance (the #37 fix); deselected by default, run on-host",
]
